src/app/page.module.css
.main {
  display: flex;
  flex-direction: column;
  gap: 70px 0px;
  background-color: transparent;
  padding: 0 0 50px 0;
}

.mainDivTwo {
  width: 100%;
  height: fit-content;
  margin: 0 auto;
  display: flex;
  gap: 100px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

